// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-188s9io-0 hdOscF"
>
  <h1
    class="profiles__Title-sc-188s9io-1 gNeokB"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-188s9io-2 eCmFJC"
  >
    <li
      class="profiles__Item-sc-188s9io-5 ggxMcQ"
    >
      <img
        class="profiles__Picture-sc-188s9io-4 blSfRZ"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-188s9io-3 bKoHTO"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-188s9io-0 hdOscF"
>
  <h1
    class="profiles__Title-sc-188s9io-1 gNeokB"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-188s9io-2 eCmFJC"
  >
    <li
      class="profiles__Item-sc-188s9io-5 ggxMcQ"
    >
      <img
        class="profiles__Picture-sc-188s9io-4 blSfRZ"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-188s9io-3 bKoHTO"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
